tests/type/bad/wrong-number-of-parameter3.py
def foo():
    return 1

z = foo(1, 2)
